chore: some fixes
